Har lagt til en futuristisk boks der artiklene skal ligge. Denne bør antakelig bli litt bredere i det ferdige produktet, og vi må ha en lignende boks som er enda bredere sidene til de faktiske artiklene. Har også laget de forskjellige ikonene jeg antar vi burde ha som viser metainformasjon som forfatter, kommentarer, når postet.
Mangler facebook ikon / likerknapp.

--- a/design/html/oving.html
+++ b/design/html/oving.html
@@ -11,6 +11,7 @@
 		<link type="text/css" rel="stylesheet" href="../css/arr_oversikt.css" />
 		<link type="text/css" rel="stylesheet" href="../css/kalender.css" />
 		<link type="text/css" rel="stylesheet" href="../css/organisering.css" />
+		<link type="text/css" rel="stylesheet" href="../css/artikler.css" />
 	</head>
 
 <body>
@@ -246,40 +247,52 @@
 	<div id="body">
 	<div class="centeredContainer">
 
-		<!-- Her kommer mesteparten av innholdet til å være. Detter er da den
+		<!-- Her kommer mesteparten av innholdet til å være. Dett er er da den
 		sentrerte boksen som inneholder reklame, artikler, søk, sidemeny osv.
 		omtrent alt som ikke er i head eller neck. -->
 
 		<div class="left">
 
 			<!-- Ment til å inneholde eventuell reklame -->
+			Ment til å inneholde eventuell reklame
 			&nbsp;
 
 		</div>
 		<div class="middle">
-			<div class="marginLeft">
-				<!-- Inneholder venstre fragment av venstre del
-			       	av addontech bildet -->
+			<div class="leftMargin">
+				&nbsp;
 			</div>
-			<div class="marginCenter">
-				<div class="topBox">
-					<!-- Inneholder høyre frament av venstre del
-					av addontech bildet. -->
-				</div>
-				<div class="middleBox">
-					<div class="innh">
+			<div class="centerMargin">
+				<div class="box">
+
+					<div class="topBox">
+						&nbsp;
 					</div>
-					<div class="sideMargin">
+					<div class="middleBox">
+
+						<div class="innh">
+							<h2>Arrangementoverskrift</h2>
+							<div class="meta">
+								Arrangement
+							</div>
+							<div class="innhWrapper">
+								<div class="detaljer">
+									<span class="tid">Postet 12. mai 2011 ~ 01:13</span>
+									<a class="person" href="fredrkro_profil.html">Fredrik Nicolai Krohg</a> 
+									<a class="kommentarer" href="kommentarer.html">4 Kommentarer</a>
+								</div>
+								<div class="tekstOgBilde">
+Morbi quis mattis sem. Vestibulum eget elit dolor, non venenatis risus. Nulla risus tortor, eleifend ut euismod eu, sodales sit amet urna. Integer et ipsum sem, non euismod lorem. Duis pellentesque purus ut nibh volutpat scelerisque consectetur eros viverra. Vivamus pharetra molestie mauris, nec gravida nisi tincidunt nec. Ut egestas varius tincidunt. Vivamus quis eros orci. Vivamus in orci non velit auctor porta vitae a arcu. Vestibulum nibh turpis, mollis et adipiscing euismod, viverra vitae ligula.
+								</div>
+							</div>
+						</div>
+
 					</div>
+					<div class="footBox">
+						&nbsp;
+					</div>
+
 				</div>
-				<div class="footBox">
-					<!-- Inneholder venstre fragment av høyre del av
-					addontech bildet.-->
-				</div>
-			</div>
-			<div class="marginRight">
-				<!-- Inneholder høyre fragment av høyre del av addontech
-				bildet.-->
 			</div>
 		</div>
 		<div class="right">
@@ -287,6 +300,9 @@
 			<!-- Her skal det være en del navigasjonsrelatert i tillegg til
 			ekstra informasjon som f.eks. "vi gratulerer" "quote of the day"
 			osv. -->
+			Her skal det være en del navigasjonsrelatert i tillegg til
+			ekstra informasjon som f.eks. "vi gratulerer" "quote of the day"
+			osv.
 			&nbsp;
 
 		</div>
