--- a/design/html/oving.html
+++ b/design/html/oving.html
@@ -30,21 +30,12 @@
 		<span class="clear">&nbsp;</span>
 		<img src="../img/nabla.png" /><h1>Linjeforeningen Nabla</h1>
 
-		<form action="login.php" method="get">
-		<table class="loginBox" cellspacing="0" cellpadding="0">
-			<tr>
-				<th colspan="2">Login</th>
-			</tr>
-			<tr>
-				<td>Brukernavn</td> <td class="hJustert"><input type="text" placeholder="Username" name="username" size="30" /></td>
-			</tr>
-			<tr>
-				<td>Passord</td> <td class="hJustert"><input type="password" placeholder="Password" name="paswd" size="30" /></td>
-			</tr>
-			<tr>
-				<td colspan="2" class="hJustert"><input type="submit" value="Submit" /></td>
-			</tr>
-		</table>
+		<form action="login.php" method="post">
+		<ul class="loginBox">
+			<li><input type="text" class="field" placeholder="Username" name="username" size="20" /></li>
+			<li><input type="password" class="field" placeholder="Password" name="paswd" size="20" /></li>
+			<li><input type="submit" value="Logg inn" /></li>
+		</ul>
 		</form>
 
 	</div>
@@ -53,7 +44,6 @@
 	<div id="neck">
 	<div class="centeredContainer">
 
-		<div class="lcontainer"> <a href="ny_student.html"><img id="sekk" src="../img/ny_stud_sekk.png"> </a> </div>
 		<div id="nesteArrang">
 			<a href="arr.html"><h3 class="overskrift">Forestående arrangementer</h3></a>
 
@@ -300,9 +290,11 @@ Morbi quis mattis sem. Vestibulum eget elit dolor, non venenatis risus. Nulla ri
 			<!-- Her skal det være en del navigasjonsrelatert i tillegg til
 			ekstra informasjon som f.eks. "vi gratulerer" "quote of the day"
 			osv. -->
+			<div id="sok">
 			<form action="search.py" method="get">
-				<div id="sok"><input class="box" type="text" placeholder="Søk..." name="sok" size="25" /><input type="image" id="searchKnapp" src="../img/go_knapp.png" name="submit" /></div>
+				<input class="box" type="text" placeholder="Søk..." name="sok" size="25" /><input type="image" id="searchKnapp" src="../img/go_knapp.png" name="submit" />
 			</form>
+			</div>
 
 			<ul class="nav">
 				<li class="top"><a href="kontakt.html">Kontakt</a></li>
