--- a/design/html/oving.html
+++ b/design/html/oving.html
@@ -5,6 +5,7 @@
 		<meta name="author" content="Fredrik Nicolai Krohg" />
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 		<title>Ceres</title>
+
 		<link type="text/css" rel="stylesheet" href="../css/main.css" />
 		<link type="text/css" rel="stylesheet" href="../css/top_menu.css" />
 		<link type="text/css" rel="stylesheet" href="../css/login_table.css" />
@@ -41,6 +42,7 @@
 	</div>
 	</div>
 
+	{% block neck %}
 	<div id="neck">
 	<div class="centeredContainer">
 
@@ -234,6 +236,7 @@
 
 	</div>
 	</div>
+	{% endblock neck %}
 
 	<div id="body">
 	<div class="centeredContainer">
