Lagt inn riktig css mappe

--- a/design/twabla/design.html
+++ b/design/twabla/design.html
@@ -18,7 +18,7 @@
     <!-- Styles -->
     <link href="css/bootstrap.css" rel="stylesheet"><!-- Do not modify -->
 	<link href="css/bootstrap-responsive.css" rel="stylesheet"><!-- Do not modify -->
-	<link href="default.css" rel="stylesheet"><!-- Go ahead -->
+	<link href="css/default.css" rel="stylesheet"><!-- Go ahead -->
 
 
     <!-- Fav and touch icons, for screen and mobile -->
