Lagt til urls for kalenderen. Lagt til css for kalenderen.
Url er nå /2013/8/ for å vise august 2013.

--- a/design/twabla/kalender.html
+++ b/design/twabla/kalender.html
@@ -206,11 +206,11 @@
 					</tbody>
 					
 				</table>
-				</div>
+                </div> <!-- calWrapper -->
 			
-			</div>
+            </div> <!-- span12 -->
 			
-		</div>
+        </div><!-- row -->
 
     </div>
 	<!-- end main container  -->
