removed mail-link in all mailto links

--- a/static/404/index.html
+++ b/static/404/index.html
@@ -12,6 +12,6 @@
         <p class="wikitext">PS: Nablas egen fagwiki, <a href="http://www.nabla.no/wiki/"><strong>NablaWiki</strong></a>, er fremdeles oppe og går.<br>Her kan du som er ny student lese om
         fagene du skal ha, og få nyttige tips<br>til å på best måte komme deg gjennom tiden din på Fysikk og matematikk.</p>
         <p>PPS: Har du et spørsmål som ikke er besvart på NablaWiki? Send en mail til <a
-            href="mailto:nabla [Ætt] gmail.com">nabla [Ætt] gmail.com</a> &ndash; uansett hva det skulle være!</p>
+            href="mailto:">nabla [Ætt] gmail.com</a> &ndash; uansett hva det skulle være!</p>
     </body>
 </html>
